--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap');
 .parent {
     justify-content: space-evenly;
 }
@@ -19,4 +20,7 @@ body{
 .developers{
     background-color: white;
     color: black;
+    font-family: 'Poppins', sans-serif;
+    font-size: larger;
+    color: darkred;
 }
